Added fortify scan