@@ -158,6 +158,12 @@ task runProviderPactVerification(type: Test) {
   systemProperty 'pact.provider.version', project.pactVersion
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 runProviderPactVerification.dependsOn contract
 
 runProviderPactVerification.finalizedBy pactVerify
@@ -315,6 +321,7 @@ dependencies {
   implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.9'
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
 
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
   testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.16.2'
   testImplementation "org.testcontainers:junit-jupiter:1.16.2"
   testImplementation "org.testcontainers:testcontainers:1.16.2"
